basic complete phase

--- a/CSS/data_collector.css
+++ b/CSS/data_collector.css
@@ -37,3 +37,19 @@
 #input-qvalue{
     width:50%
 }
+
+#phase-group{
+    width:40%
+}
+
+#phase-group .badge{
+    margin-right:2%
+}
+
+.glyphicon-plus{
+    float:right
+}
+
+.phaseText{
+    display:inline
+}
