--- a/CSS/data_collector.css
+++ b/CSS/data_collector.css
@@ -66,7 +66,7 @@
 }
 
 #phase-group{
-    width:40%
+    display: inline;
 }
 
 #phase-group a{
@@ -82,5 +82,17 @@
 }
 
 .phaseText{
+    display:inline
+}
+
+#actions-group{
+    display: inline;
+}
+
+#actions-group a{
+    cursor: pointer;
+}
+
+.actionText{
     display:inline
 }
